--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     
+    <div id="container">
+      <button class="button" id="rock">rock</button>
+      <button class="button" id="paper">paper</button>
+      <button class="button" id="scissors">scissors</button>
+    </div>
+
 </body>
 </html>
